--- a/package.json
+++ b/package.json
@@ -10,7 +10,24 @@
   "dependencies": {
     "@atomicdesign/atomic-singularity": "1.0.0"
   },
+  "scripts": {
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && npm run build:full",
+    "build:common": "npm run clean && npm run build:swc",
+    "build:swc": "swc ./src -d ./dist/src",
+    "build:full": "tsc && tsc-alias"
+  },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.92",
+    "rimraf": "^5.0.5",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "files": [
+    "dist/**/*.ts",
+    "dist/**/*.d.ts",
+    "dist/**/*.js"
+  ]
 }
