Changed build process to emit proper modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     // Currently we're only targeting support for the latest tools
-    "target": "ESNext",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "esnext",
+    "module": "esnext",
+
+    // Sythentic imports to make importing older frameworks easier
+    "allowSyntheticDefaultImports": true,
 
     // We want to emit declaration files
     "declaration": true,
