--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "type": "module",
   "author": {
     "name": "Brandon Erb",
     "email": "brandom.m.erb@gmail.com"
   },
   "dependencies": {
-    "@atomicdesign/atomic-singularity": "1.0.0",
-    "vue": "^3.3.4"
+    "@atomicdesign/atomic-singularity": "1.0.0"
   },
   "scripts": {
     "clean": "rimraf ./dist",
@@ -20,10 +20,14 @@
     "@babel/types": "^7.23.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.92",
+    "unplugin-swc": "^1.4.3",
     "rimraf": "^5.0.5",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "main": "dist/index.js",
   "exports": {
@@ -35,6 +39,7 @@
   },
   "peerDependencies": {
     "pinia": "^2.1.7",
+    "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   }
 }
