--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     // Currently we're only targeting support for the latest tools
     "target": "esnext",
     "module": "esnext",
+    "moduleResolution": "Bundler",
 
     // Sythentic imports to make importing older frameworks easier
     "allowSyntheticDefaultImports": true,
